package com.capstone.moneytree.model;

public enum MoneyTreeOrderType {
   MARKET_BUY,
   MARKET_SELL,
   LIMIT_BUY,
   LIMIT_SELL
}
